--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,17 @@
 {
+	// Use IntelliSense to learn about possible attributes.
+	// Hover to view descriptions of existing attributes.
+	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+	"version": "0.2.0",
 	"configurations": [
 		{
-			"name": "Docker Node.js Launch",
-			"type": "docker",
+			"type": "pwa-node",
 			"request": "launch",
-			"preLaunchTask": "docker-run: debug",
-			"platform": "node",
-			"node": {
-				"package": "${workspaceFolder}/server/package.json",
-				"localRoot": "${workspaceFolder}/server"
-			}
+			"name": "Launch Program",
+			"skipFiles": [
+				"<node_internals>/**"
+			],
+			"program": "${workspaceFolder}\\server\\index.js"
 		}
 	]
 }
